tweak spacing and fix reset infinite scroll

--- a/styles/pages/_facebook.scss
+++ b/styles/pages/_facebook.scss
@@ -1,5 +1,5 @@
 .fb-post {
-  margin-top: 3em;
+  margin-top: 2.5em;
   margin-bottom: 0.5em;
   margin-left: auto;
   margin-right: auto;
